# any_logger

./: LICENSE  README.md  pyproject.toml
any_logger/: __init__.py  addons.py  logger.py
